--- a/main.css
+++ b/main.css
@@ -28,6 +28,15 @@
   --dt-input-color: var(--primary-color);
 }
 
+.image {
+  width: 333px;
+  height: 187px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  z-index: 1;
+}
+
 .material-icons {
   font-size: 10px;
 }
