--- a/main.css
+++ b/main.css
@@ -51,6 +51,7 @@
   margin: 0 auto;
   font-size: 14px;
   line-height: 5px;
+  vertical-align: middle;
 }
 
 .datatable-container .header-tools {
@@ -157,6 +158,7 @@
   height : 2px;
   width: 30%;
   line-height: 5px;
+  vertical-align: middle;
 }
 
 .datatable-container .datatable,
