--- a/main.css
+++ b/main.css
@@ -37,6 +37,18 @@
   z-index: 1;
 }
 
+.column {
+  float: left;
+  width: 50%;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
 .material-icons {
   font-size: 10px;
 }
