--- a/main.css
+++ b/main.css
@@ -28,13 +28,6 @@
   --dt-input-color: var(--primary-color);
 }
 
-.mobile-wrap {
-  overflow: hidden;
-}
-img {  
-  padding-left: 50%;
-  margin-left: -167px; /* pixel value has to be half of the image width */
-}
 
 .image {
   width: 333px;
@@ -42,6 +35,7 @@ img {
   display: block;
   margin-left: auto;
   margin-right: auto;
+  margin:0 auto;
   z-index: 1;
   text-align: center;
 }
