--- a/main.css
+++ b/main.css
@@ -38,6 +38,9 @@
   margin:0 auto;
   z-index: 1;
   text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .column {
